--- a/problems/0027.移除元素/移除元素.md
+++ b/problems/0027.移除元素/移除元素.md
@@ -4,9 +4,9 @@
 
 > **数组的元素在内存地址中是连续的，不能单独删除数组中的某个元素，只能覆盖。**
 
-说到数组移除元素，一般的思路都是两个循环：将要移除元素的**后续元素依次前移**，**时间复杂度**是O(n^2)
+说到数组移除元素，一般的思路都是两个循环：将要移除元素的**后续元素依次前移**，**时间复杂度**是**O(n^2)**。
 
-鉴于题目中说**可改变数组元素顺序**且返回数组大小`size`，我第一时间想到的是把**要删除的元素**与数组尾元素交换，`size`减一，这样以后遍历数组就不会访问到删除元素了
+鉴于题目中说**可改变数组元素顺序**且返回数组大小`size`，我第一时间想到的是把**要删除的元素**与数组尾元素交换，`size`减一，这样以后遍历数组就不会访问到删除元素了。
 
 `solution1.cpp` 为
 
@@ -32,9 +32,9 @@
         }
     };
    
-上述程序要注意的就是代码注释处，否则会出现**待删除**数据删除不完全的情况
+上述程序要注意的就是代码注释处，否则会出现**待删除**数据删除不完全的情况。
 
-`solution2.cpp` 使用**双指针法**
+`solution2.cpp` 使用**双指针法**。
 
 > 双指针法（快慢指针法）： **通过一个快指针和慢指针在一个for循环下完成两个for循环的工作。**
 
