--- a/problems/0027.移除元素/移除元素.md
+++ b/problems/0027.移除元素/移除元素.md
@@ -9,28 +9,28 @@
 鉴于题目中说**可改变数组元素顺序**且返回数组大小`size`，我第一时间想到的是把**要删除的元素**与数组尾元素交换，`size`减一，这样以后遍历数组就不会访问到删除元素了。
 
 `solution1.cpp` 为
-
+```c++
         class Solution {
-    public:
-        int removeElement(vector<int>& nums, int val) {
-            int size = nums.size();
-            for (int i = 0; i < size; i++) {
-                if (nums[i] == val) {
-                    switchElement(nums,i,size - 1);
-                    size--;
-                    i--;    //若数组尾元素也是待删除元素，则再次移到尾部
+        public:
+            int removeElement(vector<int>& nums, int val) {
+                int size = nums.size();
+                for (int i = 0; i < size; i++) {
+                    if (nums[i] == val) {       //如果i位置元素为待移除元素，将其与数组末尾元素交换
+                        switchElement(nums,i,size - 1);
+                        size--;
+                        i--;
+                    }
                 }
+                return size;
             }
-            return size;
-        }
 
-        void switchElement(vector<int>& nums, int pos_1, int pos_2) {
-            int a;
-            a = nums[pos_1];
-            nums[pos_1] = nums[pos_2];
-            nums[pos_2] = a;
-        }
-    };
+            void switchElement(vector<int>& nums, int pos_1, int pos_2) {       //交换数组中pos_1与pos_2两位置的元素
+                int a;
+                a = nums[pos_1];
+                nums[pos_1] = nums[pos_2];
+                nums[pos_2] = a;
+            }
+        };
    
 上述程序要注意的就是代码注释处，否则会出现**待删除**数据删除不完全的情况。
 
