为代码块添加高亮

--- a/problems/0027.移除元素/移除元素.md
+++ b/problems/0027.移除元素/移除元素.md
@@ -10,47 +10,49 @@
 
 `solution1.cpp` 为
 ```c++
-        class Solution {
-        public:
-            int removeElement(vector<int>& nums, int val) {
-                int size = nums.size();
-                for (int i = 0; i < size; i++) {
-                    if (nums[i] == val) {       //如果i位置元素为待移除元素，将其与数组末尾元素交换
-                        switchElement(nums,i,size - 1);
-                        size--;
-                        i--;
-                    }
-                }
-                return size;
+class Solution {
+public:
+    int removeElement(vector<int>& nums, int val) {
+        int size = nums.size();
+        for (int i = 0; i < size; i++) {
+            if (nums[i] == val) {       //如果i位置元素为待移除元素，将其与数组末尾元素交换
+                switchElement(nums,i,size - 1);
+                size--;
+                i--;
             }
+        }
+        return size;
+    }
 
-            void switchElement(vector<int>& nums, int pos_1, int pos_2) {       //交换数组中pos_1与pos_2两位置的元素
-                int a;
-                a = nums[pos_1];
-                nums[pos_1] = nums[pos_2];
-                nums[pos_2] = a;
-            }
-        };
-   
+    void switchElement(vector<int>& nums, int pos_1, int pos_2) {       //交换数组中pos_1与pos_2两位置的元素
+        int a;
+        a = nums[pos_1];
+        nums[pos_1] = nums[pos_2];
+        nums[pos_2] = a;
+    }
+};
+```
+
 上述程序要注意的就是代码注释处，否则会出现**待删除**数据删除不完全的情况。
 
 `solution2.cpp` 使用**双指针法**。
 
 > 双指针法（快慢指针法）： **通过一个快指针和慢指针在一个for循环下完成两个for循环的工作。**
-
-    class Solution {
-    public:
-        int removeElement(vector<int>& nums, int val) {
-            int size = nums.size();
-            int slow_p = 0;
-            for (int fast_p = 0; fast_p < size; fast_p++) {
-                if (val != nums[fast_p]) {
-                    nums[slow_p++] = nums[fast_p];
-                }
-            }
-            return slow_p;
+```c++
+class Solution {
+public:
+    int removeElement(vector<int>& nums, int val) {
+        int size = nums.size();
+        int slow_p = 0;
+        for (int fast_p = 0; fast_p < size; fast_p++) {
+            if (val != nums[fast_p]) {      
+                nums[slow_p++] = nums[fast_p];      //如果快指针没指向待删除元素，将快指针所指的值赋值给慢指针所指处，慢指针右移
+            }                                       //如果快指针指向待删除元素，快指针右移，后续慢指针指向该元素时，待删除元素被覆盖
         }
-    };
+        return slow_p;      //慢指针数值恰好为数组大小
+    }
+};
+```
     
 - 时间复杂度：$O(n^2)$
 - 空间复杂度：$O(1)$
