添加代码高亮

--- a/problems/0704.二分查找/二分查找.md
+++ b/problems/0704.二分查找/二分查找.md
@@ -3,42 +3,45 @@
 [LeetCode链接](https://leetcode-cn.com/problems/binary-search/)
 
 `solution1.cpp` 为**递归算法**每次选取**中值**与**查询数据**比较，**中值**比**查询值**小则取**左区间中值**比较，大则取**右区间中值**比较。
+```c++
+class Solution {
+public:
+    int search(vector<int>& nums, int target) {
+        int midPos = nums.size()/2;
+        return compareMidPos(nums,midPos,nums.size()/2,target);
+    }
 
-    class Solution {
-    public:
-        int search(vector<int>& nums, int target) {
-            int midPos = nums.size()/2;
-            return compareMidPos(nums,midPos,nums.size()/2,target);
+    int compareMidPos(vector<int>& nums, int &pos, int size, int target) {
+        size = size / 2;
+        if (target < nums[pos]) {
+            if (pos-1 < 0 || target > nums[pos-1]) return -1;
+            pos = pos - (size / 2 + 1); 
+            compareMidPos(nums,pos,size,target);
         }
+        if (target > nums[pos]) {
+            if (pos + 1 >= nums.size() || target < nums[pos+1]) return -1;
+            pos = pos + (size / 2 + 1);
+            compareMidPos(nums,pos,size,target);
+        }
+        if (target == nums[pos]) return pos;
+        else return -1;
+    } 
+};
+```
 
-        int compareMidPos(vector<int>& nums, int &pos, int size, int target) {
-            size = size / 2;
-            if (target < nums[pos]) {
-                if (pos-1 < 0 || target > nums[pos-1]) return -1;
-                pos = pos - (size / 2 + 1); 
-                compareMidPos(nums,pos,size,target);
-            }
-            if (target > nums[pos]) {
-                if (pos + 1 >= nums.size() || target < nums[pos+1]) return -1;
-                pos = pos + (size / 2 + 1);
-                compareMidPos(nums,pos,size,target);
-            }
-            if (target == nums[pos]) return pos;
-            else return -1;
-        } 
-    };
-    
 `solution2.py` 尝试使用**python**编写，取**左闭右闭**区间。**查询值**小于中值，则区间范围向左缩小；**查询值**大于中值，区间范围向右缩小。
 
-    class Solution:
-        def search(self, nums: List[int], target: int) -> int:
-            left = 0 
-            right = len(nums) - 1 
-            while (left <= right):
-                mid = (right + left) // 2
-                if (target < nums[mid]):
-                    right = mid - 1
-                elif (target > nums[mid]):
-                    left = mid + 1
-                else: return mid
-            return -1
+```python
+class Solution:
+    def search(self, nums: List[int], target: int) -> int:
+        left = 0 
+        right = len(nums) - 1 
+        while (left <= right):
+            mid = (right + left) // 2
+            if (target < nums[mid]):
+                right = mid - 1
+            elif (target > nums[mid]):
+                left = mid + 1
+            else: return mid
+        return -1
+```
