增加代码高亮

--- a/problems/0977.有序数组的平方/有序数组的平方.md
+++ b/problems/0977.有序数组的平方/有序数组的平方.md
@@ -8,22 +8,24 @@
 
 `solution.cpp` 如下
 
-     #include <math.h>
-    class Solution {
-    public:
-        vector<int> sortedSquares(vector<int>& nums) {
-            int left_p = 0;
-            int right_p = nums.size() - 1;
-            int insertPos = nums.size() - 1;
-            vector<int> powNums(nums.size() );
-            while (insertPos >=0) {
-                if (pow(nums[left_p],2) >= pow(nums[right_p],2) ) {
-                    powNums[insertPos--] = pow(nums[left_p++],2);
-                }
-                else {
-                    powNums[insertPos--] = pow(nums[right_p--],2);
-                }
+```c++
+#include <math.h>
+class Solution {
+public:
+    vector<int> sortedSquares(vector<int>& nums) {
+        int left_p = 0;
+        int right_p = nums.size() - 1;
+        int insertPos = nums.size() - 1;
+        vector<int> powNums(nums.size() );
+        while (insertPos >= 0) {        //取平方数组两边较大值赋给新数组尾部
+            if (pow(nums[left_p],2) >= pow(nums[right_p],2) ) {
+                powNums[insertPos--] = pow(nums[left_p++],2);       
             }
-            return powNums;
+            else {
+                powNums[insertPos--] = pow(nums[right_p--],2);
+            }
         }
-    };
+        return powNums;
+    }
+};
+```
