--- a/problems/0059.旋转矩阵/旋转矩阵.md
+++ b/problems/0059.旋转矩阵/旋转矩阵.md
@@ -1,58 +1,101 @@
 # 27.移除元素
 
-[LeetCode链接](https://leetcode-cn.com/problems/remove-element/)
+[LeetCode链接](https://leetcode-cn.com/problems/spiral-matrix-ii/)
 
-> **数组的元素在内存地址中是连续的，不能单独删除数组中的某个元素，只能覆盖。**
+本题的操作思路就是**模拟过程**，模拟对矩阵中填入元素的过程，我的思路如下：
 
-说到数组移除元素，一般的思路都是两个循环：将要移除元素的**后续元素依次前移**，**时间复杂度**是**O(n^2)**。
+依次设置对矩阵赋值过程的上下左右闭区间边界，按顺序对矩阵进行赋值，一旦碰到边界，则赋值方向改变，边界内缩。
 
-鉴于题目中说**可改变数组元素顺序**且返回数组大小`size`，我第一时间想到的是把**要删除的元素**与数组尾元素交换，`size`减一，这样以后遍历数组就不会访问到删除元素了。
-
-`solution1.cpp` 为
+`solution.cpp`:
 ```c++
 class Solution {
 public:
-    int removeElement(vector<int>& nums, int val) {
-        int size = nums.size();
-        for (int i = 0; i < size; i++) {
-            if (nums[i] == val) {       //如果i位置元素为待移除元素，将其与数组末尾元素交换
-                switchElement(nums,i,size - 1);
-                size--;
-                i--;
+    vector<vector<int>> generateMatrix(int n) {
+        vector<vector<int>> matrix(n, vector<int>(n));
+        int topBorder = 1;
+        int bottomBorder = n - 1;
+        int leftBorder = 0;
+        int rightBorder = n - 1;
+        int i = 0; int j = 0;
+        int val = 1;
+        do {
+            while (j <= rightBorder) {      //往右赋值直到右边界
+                matrix[i][j++] = val++;
             }
-        }
-        return size;
-    }
+            j--; val--;     //把加多的值减回来
+            rightBorder--;      //右边界左缩一格
 
-    void switchElement(vector<int>& nums, int pos_1, int pos_2) {       //交换数组中pos_1与pos_2两位置的元素
-        int a;
-        a = nums[pos_1];
-        nums[pos_1] = nums[pos_2];
-        nums[pos_2] = a;
+            while (i <= bottomBorder) {     //往下赋值直到下边界
+                matrix[i++][j] = val++;
+            }
+            i--; val--;     //把加多的值减回来
+            bottomBorder--;     //下边界上缩一格
+
+            while (j >= leftBorder) {       //往左赋值直到左边界
+                matrix[i][j--] = val++;
+            }
+            j++; val--;     //把加多的值减回来
+            leftBorder++;       //左边界右缩一格
+
+            while (i >= topBorder) {        //往上赋值直到上边界
+                matrix[i--][j] = val++;
+            }
+            i++; val--;     //把加多的值减回来
+            topBorder++;        //上边界下缩一格
+        } while ( val < n * n);
+        return matrix;
     }
 };
 ```
 
-上述程序要注意的就是代码注释处，否则会出现**待删除**数据删除不完全的情况。
+但是这样的算法在力扣运行中出现了超时的情况，此处附上别人通过的解法：
 
-`solution2.cpp` 使用**双指针法**。
-
-> 双指针法（快慢指针法）： **通过一个快指针和慢指针在一个for循环下完成两个for循环的工作。**
 ```c++
 class Solution {
 public:
-    int removeElement(vector<int>& nums, int val) {
-        int size = nums.size();
-        int slow_p = 0;
-        for (int fast_p = 0; fast_p < size; fast_p++) {
-            if (val != nums[fast_p]) {      
-                nums[slow_p++] = nums[fast_p];      //如果快指针没指向待删除元素，将快指针所指的值赋值给慢指针所指处，慢指针右移
-            }                                       //如果快指针指向待删除元素，快指针右移，后续慢指针指向该元素时，待删除元素被覆盖
+    vector<vector<int>> generateMatrix(int n) {
+        vector<vector<int>> res(n, vector<int>(n, 0)); // 使用vector定义一个二维数组
+        int startx = 0, starty = 0; // 定义每循环一个圈的起始位置
+        int loop = n / 2; // 每个圈循环几次，例如n为奇数3，那么loop = 1 只是循环一圈，矩阵中间的值需要单独处理
+        int mid = n / 2; // 矩阵中间的位置，例如：n为3， 中间的位置就是(1，1)，n为5，中间位置为(2, 2)
+        int count = 1; // 用来给矩阵中每一个空格赋值
+        int offset = 1; // 每一圈循环，需要控制每一条边遍历的长度
+        int i,j;
+        while (loop --) {
+            i = startx;
+            j = starty;
+
+            // 下面开始的四个for就是模拟转了一圈
+            // 模拟填充上行从左到右(左闭右开)
+            for (j = starty; j < starty + n - offset; j++) {
+                res[startx][j] = count++;
+            }
+            // 模拟填充右列从上到下(左闭右开)
+            for (i = startx; i < startx + n - offset; i++) {
+                res[i][j] = count++;
+            }
+            // 模拟填充下行从右到左(左闭右开)
+            for (; j > starty; j--) {
+                res[i][j] = count++;
+            }
+            // 模拟填充左列从下到上(左闭右开)
+            for (; i > startx; i--) {
+                res[i][j] = count++;
+            }
+
+            // 第二圈开始的时候，起始位置要各自加1， 例如：第一圈起始位置是(0, 0)，第二圈起始位置是(1, 1)
+            startx++;
+            starty++;
+
+            // offset 控制每一圈里每一条边遍历的长度
+            offset += 2;
         }
-        return slow_p;      //慢指针数值恰好为数组大小
+
+        // 如果n为奇数的话，需要单独给矩阵最中间的位置赋值
+        if (n % 2) {
+            res[mid][mid] = count;
+        }
+        return res;
     }
 };
 ```
-    
-- 时间复杂度：$O(n^2)$
-- 空间复杂度：$O(1)$
