更新算法解决超时问题

--- a/problems/0059.旋转矩阵/旋转矩阵.md
+++ b/problems/0059.旋转矩阵/旋转矩阵.md
@@ -6,7 +6,7 @@
 
 依次设置对矩阵赋值过程的上下左右闭区间边界，按顺序对矩阵进行赋值，一旦碰到边界，则赋值方向改变，边界内缩。
 
-`solution.cpp`:
+`time_out_solution.cpp`:
 ```c++
 class Solution {
 public:
@@ -48,7 +48,45 @@ public:
 };
 ```
 
-但是这样的算法在力扣运行中出现了超时的情况，此处附上别人通过的解法：
+但是这样的算法在力扣运行中出现了超时的情况，经过排查，可能是因为把多加的值减回来的操作导致了超时，附上更新后的程序：
+
+```c++
+class Solution {
+public:
+    vector<vector<int>> generateMatrix(int n) {
+        vector<vector<int>> matrix(n, vector<int>(n));
+        int topBorder = 0;
+        int bottomBorder = n - 1;
+        int leftBorder = 0;
+        int rightBorder = n - 1;
+        int val = 1;
+        while ( val <= n * n) {
+            for (int j = leftBorder; j <= rightBorder; j++) {      //往右赋值直到右边界
+                matrix[topBorder][j] = val++;
+            }
+            topBorder++;        //上边界下缩一格
+
+            for (int i = topBorder; i <= bottomBorder; i++) {     //往下赋值直到下边界
+                matrix[i][rightBorder] = val++;
+            }
+            rightBorder--;     //右边界左缩一格
+
+            for (int j = rightBorder; j >= leftBorder; j--) {       //往左赋值直到左边界
+                matrix[bottomBorder][j] = val++;
+            }
+            bottomBorder--;       //下边界上缩一格
+
+            for (int i = bottomBorder; i >= topBorder; i--) {        //往上赋值直到上边界
+                matrix[i][leftBorder] = val++;
+            }
+            leftBorder++;        //左边界右缩一格
+        } 
+        return matrix;
+    }
+};
+```
+
+此处附上别人通过的解法：
 
 ```c++
 class Solution {
