--- a/problems/蓝桥历年真题/C语言_B组省赛真题/2012年第三届C_B组蓝桥杯省赛真题/05.方阵转置.md
+++ b/problems/蓝桥历年真题/C语言_B组省赛真题/2012年第三届C_B组蓝桥杯省赛真题/05.方阵转置.md
@@ -27,7 +27,7 @@ void rotate(int *x,int rank)
 	{ 
 		y[___________________]= x[i];  //填空
 	}
-	for(i=0;i<rank*rank;i++) x[i]=y[i];
+	for(int i=0;i<rank*rank;i++) x[i]=y[i];
 	free(y);
 }
 
@@ -45,5 +45,35 @@ int main(int argc,char *argv[])
 	return 0;
 }
 ```
+# malloc函数返回值
+如果分配成功则返回指向被分配内存的指针，否则返回空指针NULL。
 
-`rank*rank*sizeof(int)`
+# malloc函数使用注意事项
+malloc函数的返回的是无类型指针，在使用时一定要强制转换为所需要的类型。
+
+**重点**：在使用malloc开辟空间时，使用完成一定要释放空间，如果不释放会造内存泄漏。
+
+在使用malloc函数开辟的空间中，不要进行指针的移动，因为一旦移动之后可能出现申请的空间和释放空间大小的不匹配。
+
+# malloc函数使用形式
+关于malloc所开辟空间类型：malloc只开辟空间，不进行类型检查，只是在使用的时候进行类型的强转。
+
+举个例子：‘我’开辟你所需要大小的字节大小空间，至于怎么使用是你的事
+
+mallo函数返回的实际是一个无类型指针，必须在其前面加上指针类型强制转换才可以使用
+
+`指针自身 = (指针类型*)malloc(sizeof(指针类型)*数据数量)`
+
+所以答案：`rank * rank * sizeof(int)`
+
+# 矩阵转置
+
+根据题意，位于`(i, j)`的元素经过顺时针转置后位置变为`(j, rank - 1 - i)`。
+
+但是题目中使用一维数组的方式访问矩阵，则下标为`[m]`的元素对应二维数组下标为`[m / rank, m % rank]`;
+
+下标为`[i, j]`的元素对应一维数组下标为`[i * rank + j]`
+
+故答案为：
+
+`i % rank * rank + (rank - 1) - i / rank`
