--- a/problems/蓝桥历年真题/C语言_B组省赛真题/2012年第三届C_B组蓝桥杯省赛真题/06.大数乘法.md
+++ b/problems/蓝桥历年真题/C语言_B组省赛真题/2012年第三届C_B组蓝桥杯省赛真题/06.大数乘法.md
@@ -25,7 +25,7 @@ void bigmul(int x,int y,int r[])
 	int n4=x2*y2;
 	r[3]=n1%base;
 	r[2]=n1/base+n2%base+n3%base;
-	r[1]=____________________ n2/base+n3/base+n4%base;  //填空
+	r[1]=____________________;  //填空
 	r[0]=n4/base;
 	r[1]+=____________________;  //填空
 	r[2]=r[2]%base;
@@ -41,3 +41,7 @@ int main(int argc,char *argv[])
 	return 0;
 }
 ```
+
+`n2 / base + n3 / base + n4 % base`
+
+`r[2] / base`
