--- a/Python/算法.md
+++ b/Python/算法.md
@@ -1,2 +1,22 @@
-- 求阶乘 （factorial）
-- 求最大公约数（gcd）
+# 求阶乘 （factorial）
+
+```python
+def factorial(num):
+    if (num < 2): return 1
+    return num * factorial(num - 1)
+
+print(factorial(10))
+```
+
+
+
+# 求最大公约数 （gcd）
+
+```python
+def gcd(a, b):
+    while (a != 0): a, b = b % a, a
+    return b
+
+print(gcd(54, 32))
+```
+
