--- a/Python/算法.md
+++ b/Python/算法.md
@@ -1,5 +1,7 @@
 # 求阶乘 （factorial）
 
+递归算法：
+
 ```python
 def factorial(num):
     if (num < 2): return 1
@@ -8,9 +10,9 @@ def factorial(num):
 print(factorial(10))
 ```
 
-
-
 # 求最大公约数 （gcd）
+
+辗转相除法：
 
 ```python
 def gcd(a, b):
@@ -20,3 +22,18 @@ def gcd(a, b):
 print(gcd(54, 32))
 ```
 
+# 找一百以内的素数（find_prime_number）
+
+```python
+data = []
+def find_prime_number(num):
+    for i in range(2, num + 1):
+        for j in range(2, int(i/2) + 1):
+            if i % j == 0: break
+        else: data.append(i)
+
+find_prime_number(100)
+print(data)
+```
+
+# 求斐波那契数（feb）
