--- a/Python/算法.md
+++ b/Python/算法.md
@@ -37,3 +37,14 @@ print(data)
 ```
 
 # 求斐波那契数（feb）
+
+```python
+def fib(num):
+    data = [1,]
+    for i in range(num - 1):
+        if num < 2:data.append(num)
+        else:data.append(sum(data[-2:]))
+    return data
+
+print(fib(10))
+```
