--- a/Python/算法.md
+++ b/Python/算法.md
@@ -36,14 +36,14 @@ find_prime_number(100)
 print(data)
 ```
 
-# 求斐波那契数（feb）
+# 求斐波那契数（fib）
 
 ```python
 def fib(num):
     data = [1,]
     for i in range(num - 1):
         if num < 2:data.append(num)
-        else:data.append(sum(data[-2:]))
+        else: data.append(sum(data[-2:]))
     return data
 
 print(fib(10))
