更新磨石头问题

--- a/problems/0416.分割等和子集/01背包问题.md
+++ b/problems/0416.分割等和子集/01背包问题.md
@@ -72,5 +72,13 @@
     - **先遍历物品，再嵌套遍历背包容量**
     
         倒序遍历，如果先遍历背包容量，再嵌套物品，那么背包里都只放入了一个物品。
+        
+        ```c++
+        for(int i = 0; i < weight.size(); i++) { // 遍历物品
+            for(int j = bagWeight; j >= weight[i]; j--) { // 遍历背包容量
+                dp[j] = max(dp[j], dp[j - weight[i]] + value[i]);
+            }
+        }
+        ```
     
 5. 举例推导dp数组
