完全背包理论

--- a/problems/0416.分割等和子集/01背包问题.md
+++ b/problems/0416.分割等和子集/01背包问题.md
@@ -41,8 +41,21 @@
 4. 确定遍历顺序
 
     1. 先遍历物品，后遍历背包
+    
     2. 先遍历背包，后遍历物品
+    
     3. 本质上：`dp[i][j]`由前序数据推出，for循环遍历次序不影响公式推导
+    
+        此处展示先外层遍历物品，嵌套内层遍历背包的代码：
+    
+        ```c++
+        for(int i = 1; i < weight.size(); i++) {    // 遍历物品
+            for(int j = 0; j <= bagweight; j++) {    // 遍历背包容量
+                if (j < weight[i]) dp[i][j] = dp[i - 1][j]; 
+                else dp[i][j] = max(dp[i - 1][j], dp[i - 1][j - weight[i]] + value[i]);
+            }
+        }
+        ```
 
 
 5. 举例推导dp数组
