完全背包排列问题

--- a/problems/0518.零钱兑换II/完全背包.md
+++ b/problems/0518.零钱兑换II/完全背包.md
@@ -72,17 +72,20 @@
 
     - `dp[i][j]` - 从下标为[0]到[i]的物品里取，每个物品可以取任意多个，放入容量为j的背包，此时的最大价值总和；
     - `dp[j]` - 容量为j的背包，每个物品可以无限量取，所装物品的最大价值总和；
+    - 组合类问题`dp[j]` - 容量为j的背包，装满（或其它条件下），所装物品的组合（或排列）数；
 
 2. 确定dp数组递推公式
 
     1. 不放物品i：`dp[j] = dp[j]`；
     2. 放物品i：`dp[j] = dp[j - weight[i]] + value[i]`；
     3. 综上，递推式为`dp[j] = max(dp[j], dp[j - weight[i]] + value[i]);`
+    3. 如果题干是**装满物品**的背包，递推式一般为：`dp[j] += dp[j - num[i]];`
 
 3. 初始化dp数组
 
     - `dp[0] = 0;`
     - 其它下标可以初始化为0；
+    - 注意**装满物品**的背包初始值需**仔细分析**，一般不为0；
 
 4. 确定遍历顺序
 
@@ -90,7 +93,7 @@
 
         `dp[i][j]`是由上一层`dp[i - 1][ ]`计算而来，当前层的`dp[i][j]`并不会被覆盖，顺序逆序遍历物品i都只被放入一次。如果顺序遍历`dp[j]`数组，就相当于`dp[i][j]`由层`dp[i][ ]`计算而来，这个过程就重复放入物品i了。
 
-    - **先遍历物品，再嵌套遍历背包容量**
+    - **先遍历物品，再嵌套遍历背包容量**或者反过来均可（要求背包装满除外）
 
         正序遍历，如果先遍历背包容量，再嵌套物品，那么背包里都只放入了一个物品。
 
@@ -108,13 +111,28 @@
 
 不同点：
 
-|                  | 完全背包                                                     | 01背包                                                       |
-| ---------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| 约束条件         | 每个物品数量无限，可以放入任意多个；                         | 每个物品只有一个，只能放入一次；                             |
+|                  |                           完全背包                           |                            01背包                            |
+| :--------------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
+|     约束条件     |             每个物品数量无限，可以放入任意多个；             |               每个物品只有一个，只能放入一次；               |
 | 二维数组递推公式 | 放物品i：`dp[i][j] = max(dp[i - 1][j], dp[i][j - weight[i]] + value[i])` | 放物品i：`dp[i][j] = max(dp[i - 1][j], dp[i - 1][j - weight[i]] + value[i])` |
-| 滚动数组遍历顺序 | 顺序遍历                                                     | 逆序遍历                                                     |
+| 滚动数组遍历顺序 |                顺序遍历，只能外物品内嵌套背包                | 逆序遍历，for循环外物品或外背包均可（**背包要求装满除外**）  |
 
 相同点：
 
 1. 二维数组遍历时，for循环嵌套顺序不影响最终计算结果；
-2. 滚动数组遍历时，for循环必须外层物品嵌套内层背包；
+
+## for嵌套顺序问题
+
+- 二维数组：for循环嵌套先后顺序不影响最终计算结果（获得背包能背的最大价值）
+
+- 滚动数组：
+    - 完全背包
+        - 一般情况下：嵌套顺序不影响最终计算结果（获得背包能背的最大价值）
+        - 背包要求装满：
+            - 外物品内背包：求排列数
+            - 外背包内物品：求组合数
+    - 01背包
+        - 外物品内背包：获得背包能背的最大价值
+        - 外背包内物品：背包里只放入了一个物品
+
+​	注：排列有序，组合无序。
