--- a/problems/0518.零钱兑换II/完全背包.md
+++ b/problems/0518.零钱兑换II/完全背包.md
@@ -73,19 +73,22 @@
     - `dp[i][j]` - 从下标为[0]到[i]的物品里取，每个物品可以取任意多个，放入容量为j的背包，此时的最大价值总和；
     - `dp[j]` - 容量为j的背包，每个物品可以无限量取，所装物品的最大价值总和；
     - 组合类问题`dp[j]` - 容量为j的背包，装满（或其它条件下），所装物品的组合（或排列）数；
+    - 凑满背包最少物品问题`dp[j]` - 和为容量j背包的所装物品的最少数量为dp[j]
 
 2. 确定dp数组递推公式
 
     1. 不放物品i：`dp[j] = dp[j]`；
     2. 放物品i：`dp[j] = dp[j - weight[i]] + value[i]`；
     3. 综上，递推式为`dp[j] = max(dp[j], dp[j - weight[i]] + value[i]);`
-    3. 如果题干是**装满物品**的背包，递推式一般为：`dp[j] += dp[j - num[i]];`
+    4. 如果题干是**装满物品**的背包，递推式一般为：`dp[j] += dp[j - num[i]];`
+    5.  如果题干是**装满物品**的背包，求最少物品数量，递推式一般为：`dp[j] = min(dp[j], dp[j - num[i]] + 1);`
 
 3. 初始化dp数组
 
     - `dp[0] = 0;`
     - 其它下标可以初始化为0；
-    - 注意**装满物品**的背包初始值需**仔细分析**，一般不为0；
+    - 注意**装满物品**的背包初始值需**具体情况具体分析**；
+    - 物品最少问题：非0下标的dp[j]一定要初始为最大值（C++一般为MAX_INT），这样dp[j]在递推的时候才不会被初始值覆盖。
 
 4. 确定遍历顺序
 
@@ -131,6 +134,7 @@
         - 背包要求装满：
             - 外物品内背包：求排列数
             - 外背包内物品：求组合数
+            - 求物品最少数：嵌套顺序无所谓
     - 01背包
         - 外物品内背包：获得背包能背的最大价值
         - 外背包内物品：背包里只放入了一个物品
