--- a/problems/0077.组合/回溯算法.md
+++ b/problems/0077.组合/回溯算法.md
@@ -73,7 +73,7 @@ void backtracking(参数) {
 
 将没有意义的遍历剪枝优化
 
-# 组合问题
+# 77.组合问题
 
 给定两个整数 n 和 k，返回 1 ... n 中所有可能的 k 个数的组合。
 
@@ -132,5 +132,89 @@ void backtracking(参数) {
 
 ```c++
 for (int i = startIndex; i <= n - (k - path.size()) + 1; i++) // i为本次搜索的起始位置
+```
+
+# 216.组合总和III
+
+在[1,2,3,4,5,6,7,8,9]这个集合中找到和为n的k个数的组合，每种组合中不存在重复的数字。
+
+- 所有数字都是正整数。
+- 解集不能包含重复的组合
+
+整体思路与组合一致
+
+剪枝：**已选元素总和如果已经大于n（题中要求的和）了，往后遍历就没有意义了，剪枝**
+
+# 17.电话号码的字母组合
+
+给定一个仅包含数字 2-9 的字符串，返回所有它能表示的字母组合。
+
+给出数字到字母的映射如下（与电话按键相同）。注意 1 不对应任何字母。
+
+## for循环起点
+
+本题开始用多个集合求组合
+
+在求组合的过程中：
+
+- 一个集合来求组合，需要startIndex
+- 多个集合取组合，各个集合之间相互不影响，不用startIndex
+- **排列问题，另一套分析套路**
+
+# 39.组合总和
+
+找出 candidates 中所有可以使数字和为 target 的组合，candidates 中的数字可以无限制重复被选取。
+
+- 所有数字（包括 target）都是正整数。
+- 解集不能包含重复的组合。
+
+本题和77.组合，216.组合总和III的区别是：本题没有数量要求，可以无限重复，但是有总和的限制。所以递归没有层数的限制，只要选取的元素总和超过target，就返回
+
+## 剪枝优化
+
+对总集合排序之后，如果下一层的sum（就是本层的 sum + candidates[i]）已经大于target，就可以结束本轮for循环的遍历。
+
+```c++
+for (int i = startIndex; i < candidates.size() && sum + candidates[i] <= target; i++)
+```
+
+# 40.组合总和II
+
+找出 candidates 中所有可以使数字和为 target 的组合，candidates 中的每个数字在每个组合中只能使用一次。
+
+和 39.组合总和 如下区别：
+
+1. 本题candidates 中的每个数字在每个组合中只能使用一次。
+2. 本题数组candidates的元素是有重复的，**但还不能有重复的组合**，而 39.组合总和 是无重复元素的数组candidates
+
+## 去重
+
+**要去重的是同一树层上的“使用过”，同一树枝上的都是一个组合里的元素，不用去重**
+
+**树层去重，需要对数组排序**
+
+```c++
+// 要对同一树层使用过的元素进行跳过
+if (i > startIndex && candidates[i] == candidates[i - 1]) {
+    continue;
+}
+```
+
+或增加used数组记录使用情况：
+
+**如果`candidates[i] == candidates[i - 1]` 并且 `used[i - 1] == false`，就说明：前一个树枝，使用了candidates[i - 1]，也就是说同一树层使用过candidates[i - 1]**。
+
+在candidates[i] == candidates[i - 1]相同的情况下：
+
+- used[i - 1] == true，说明同一树枝candidates[i - 1]使用过
+- used[i - 1] == false，说明同一树层candidates[i - 1]使用过
+
+```c++
+// used[i - 1] == true，说明同一树枝candidates[i - 1]使用过
+// used[i - 1] == false，说明同一树层candidates[i - 1]使用过
+// 要对同一树层使用过的元素进行跳过
+if (i > 0 && candidates[i] == candidates[i - 1] && used[i - 1] == false) {
+    continue;
+}
 ```
 
